# creator-trade-ideas-tracker

./: .gitignore  README.md  extract.py  pyproject.toml
docs/: adapting-to-other-creators.md  methodology.md
evals/: README.md  extraction_accuracy.md  transcript_completeness.md
examples/chris-camillo-mar-apr-2026/: README.md
examples/chris-camillo-mar-apr-2026/outputs/: all_mentions_raw.json  analysis_context.md  audit_report.md  chris_trade_ideas_by_episode.md  chris_trade_ideas_master.csv  evidence_traceability.md  highest_conviction_ideas.md  normalized_mentions.csv  raw_evidence_extraction.csv  summary_dashboard.md  ticker_timeline.md
examples/chris-camillo-mar-apr-2026/transcripts/: youtube_transcript_1_on_amazon_and_almost_no_one_owns_the_stock_2026-03-12.md  youtube_transcript_end_of_war_trades_2026-03-23.md  youtube_transcript_he_sold_everything_heres_what_hes_buying_2026-04-24.md
prompts/: trade-idea-extraction.md
prompts/creators/: chris-camillo.md
skills/youtube-transcript/: SKILL.md
